@@ -1,2 +1,5 @@
 -- Better subgroup placement with SchallCircuitGroup
 require("data-updates.schall-circuit-group")
+
+-- Unlock heat sensor together with heat pipes
+require("data-updates.unlock-tech")
